# PicoGpu

./: .clang-format  CMakeLists.txt  CMakeMacros.cmake  README.md  ShaderProgramming.md  run_gpu.sh  run_test.sh
docs/: ConfigurationPins.md  Features.md  Memory.md  ShaderProgramming.md  TaskLaunching.md
gpu/: custom_components.h  fragment.h  gpu.cpp  gpu.h  types.h
gpu/blocks/: blitter.cpp  blitter.h  command_streamer.cpp  command_streamer.h  fragment_shader.cpp  fragment_shader.h  memory.h  memory_controller.h  output_merger.cpp  output_merger.h  primitive_assembler.cpp  primitive_assembler.h  rasterizer.cpp  rasterizer.h  user_blitter.cpp  user_blitter.h  vertex_shader.cpp  vertex_shader.h
gpu/blocks/shader_array/: isa.h  request.h  shader_frontend.cpp  shader_frontend.h  shader_unit.cpp  shader_unit.h
gpu/definitions/: custom_components.h  register_allocator.cpp  register_allocator.h  shaded_fragment.h  types.h  unshaded_fragment.h
gpu/isa/: isa.h  vector_register.h
gpu/isa/assembler/: assembler.h  parser.y  pico_gpu_binary.cpp  pico_gpu_binary.h  scanner.l
gpu/util/: conversions.h  double_buffer.h  entry_cache.h  error.h  handshake.h  log.h  math.h  non_zero_count.h  os_interface.cpp  os_interface.h  port_connector.h  raii_boolean_setter.h  stb_image_write_impl.cpp  timer.h  transfer.h  vcd_trace.h
gpu_tests/: assembler_test.cpp  blitter_test.cpp  debug_memory.h  gpu_test.cpp  main.cpp  memory_controller_test.cpp  port_connector.h  real_time_gpu_test.cpp  shader_frontend_test.cpp  shader_unit_test.cpp  test_utils.h  user_blitter_test.cpp
